src/drivers/rdkfmac/build-err
make: Warning: File 'Makefile' has modification time 3.9 s in the future
make -C /lib/modules/5.19.0-46-generic/build M=/media/sf_work/wifi_programs/wlan_emulator/src/drivers/rdkfmac modules
make[1]: Entering directory '/usr/src/linux-headers-5.19.0-46-generic'
warning: the compiler differs from the one used to build the kernel
  The kernel was built by: x86_64-linux-gnu-gcc-12 (Ubuntu 12.2.0-3ubuntu1) 12.2.0
  You are using:           gcc-12 (Ubuntu 12.2.0-3ubuntu1) 12.2.0
make[2]: Warning: File '/media/sf_work/wifi_programs/wlan_emulator/src/drivers/rdkfmac/Makefile' has modification time 2.9 s in the future
  CC [M]  /media/sf_work/wifi_programs/wlan_emulator/src/drivers/rdkfmac/rdkfmac_netdev.o
/media/sf_work/wifi_programs/wlan_emulator/src/drivers/rdkfmac/rdkfmac_netdev.c:534:2: error: #error 2
  534 | #error 2
      |  ^~~~~
/media/sf_work/wifi_programs/wlan_emulator/src/drivers/rdkfmac/rdkfmac_netdev.c: In function ‘mac80211_rdkfmac_new_radio’:
/media/sf_work/wifi_programs/wlan_emulator/src/drivers/rdkfmac/rdkfmac_netdev.c:1171:9: warning: ISO C90 forbids mixed declarations and code [-Wdeclaration-after-statement]
 1171 |         struct rdkfmac_ieee80211_driver *local;
      |         ^~~~~~
In file included from ./include/uapi/linux/posix_types.h:5,
                 from ./include/uapi/linux/types.h:14,
                 from ./include/linux/types.h:6,
                 from ./include/linux/limits.h:6,
                 from ./include/linux/kernel.h:16,
                 from /media/sf_work/wifi_programs/wlan_emulator/src/drivers/rdkfmac/rdkfmac.h:4,
                 from /media/sf_work/wifi_programs/wlan_emulator/src/drivers/rdkfmac/rdkfmac_netdev.c:1:
./include/linux/stddef.h:8:14: warning: returning ‘void *’ from a function with return type ‘int’ makes integer from pointer without a cast [-Wint-conversion]
    8 | #define NULL ((void *)0)
      |              ^
/media/sf_work/wifi_programs/wlan_emulator/src/drivers/rdkfmac/rdkfmac_netdev.c:1180:24: note: in expansion of macro ‘NULL’
 1180 |                 return NULL;

